2005-09-22  Sebastien Pouliot  <sebastien@ximian.com>

	* OleDbPermissionAttributeTest.cs: Removed *Choice security actions.

2005-01-14  Atsushi Enomoto  <atsushi@ximian.com>

	* OleDbPermissionTest.cs, OleDbPermissionAttributeTest.cs:
	  Fixed some incompatible type of exception between 2.0 and 1.1.

2004-09-15  Sebastien Pouliot  <sebastien@ximian.com>

	* OleDbPermissionTest.cs: New. Unit tests for OleDbPermission.

2004-09-14  Sebastien Pouliot  <sebastien@ximian.com>

	* OleDbPermissionAttributeTest.cs: Added unit tests for Provider 
	property (unused and hidden in Fx 2.0).

2004-09-13  Sebastien Pouliot  <sebastien@ximian.com>

	* ChangeLog: New.
	* OleDbPermissionAttributeTest.cs: New. Unit tests for OleDbPermission
	Attribute.