@@ -1,3 +1,7 @@
+2007-02-20  Frederik Carlier <frederik.carlier@carlier-online.be>
+
+	* OleDbParameterCollectionTest.cs: New. Unit tests for OleDbParameterCollection.
+
 2005-09-22  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* OleDbPermissionAttributeTest.cs: Removed *Choice security actions.
